--- a/src/views/layout/header.pug
+++ b/src/views/layout/header.pug
@@ -7,4 +7,4 @@
         span.switchvalue.switchvalue--one 1
         span.switchvalue.switchvalue--two 2
         span.switchvalue.switchvalue--third 3
-      input.theme-switch#theme-switch(type="range", name="themeswitch" min="1" max="3")
+      input.theme-switch#theme-switch(type="range", name="themeswitch" min="1" max="3" aria-label="theme selector switch")
